--- a/src/app/movies/components/card/card.component.html
+++ b/src/app/movies/components/card/card.component.html
@@ -2,7 +2,7 @@
   <img mat-card-image [src]="movie | movieImage" [alt]="movie.title" class="movie-poster">
 
   <mat-card-title>
-    <span>{{movie.title | puntitos : 25}}</span>
+    <span style="color: white;">{{movie.title | puntitos : 25}}</span>
   </mat-card-title>
 
   <mat-divider></mat-divider>
