--- a/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.css
+++ b/src/app/movies/pages/peliculas-favoritas/peliculas-favoritas.component.css
@@ -1,51 +1,69 @@
-.movie-info-container {
+.movie-card-container {
   display: flex;
-  align-items: center; 
-  color: white;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.movie-card {
+  width: 300px;
+  background-color: #222;
+  color: #eee;
+}
+
+.movie-image-container {
+  height: 200px;
+  overflow: hidden;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
 .movie-image {
-  width: 100px; 
-  height: auto; 
-  margin-right: 20px; 
+  width: 100%;
+  height: auto;
+  display: block;
 }
-.button-container {
+
+.movie-details {
+  padding: 16px;
+}
+
+.movie-info {
+  margin-top: 8px;
+}
+
+.age-rating {
+  margin: 0;
+  font-size: 14px;
+  color: #F5C518;
+}
+
+.release-year, .rating {
+  margin: 0;
+  font-size: 12px;
+  color: #888;
+}
+
+.actions {
   display: flex;
-  flex-direction: column; 
-  margin-top: 10px; 
-}
-.button-container button {
-  margin-bottom: 5px; 
-  background-color: #F5C518;
-  color: black;
+  justify-content: space-between;
+  padding: 8px;
+  background-color: #333;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
-.mdc-list-item__primary-text {
-  color: white;
-}
-.icon-and-text {
-  display: flex;
-  align-items: center;
-}
-
-.icon-and-text mat-icon {
-  margin-right: 5px; 
-}
-
-.grid {
-  display: flex;
-  flex-direction: column; 
-  align-items: center; 
-  background-color: black;
-}
-
-mat-card{
-  background-color: rgb(51, 46, 46);
-}
-
-.mdc-list-item__primary-text{
+.actions button {
   color: white;
 }
 
+.rating {
+  margin: 0;
+  font-size: 12px;
+  color: #888;
+  display: flex;
+  align-items: center; /* Alinea verticalmente los elementos */
+}
 
-
+.rating mat-icon {
+  margin-right: 5px; /* Ajusta el espacio entre la estrella y la puntuación */
+}
