--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -1,50 +1,48 @@
-<div class="container">
-    <h3 mat-dialog-title>Agregar nuevo Usuario</h3>
+<mat-card class="custom-card">
+  <mat-card-header>
+    <mat-card-title>Agregar nuevo Usuario</mat-card-title>
+  </mat-card-header>
 
-    <form class="mat-dialog-content" [formGroup]="usuarioForm">
-      <div class="form">
-        <mat-form-field class="custom-mat-form-field" color="accent">
-          <input matInput placeholder="Usuario" formControlName="usuario" maxlength="100" required>
-          <mat-error *ngIf="usuarioForm.get('usuario')?.hasError('required')">El campo Usuario es obligatorio</mat-error>
-        </mat-form-field>
-      </div>
+  <mat-card-content>
+    <form [formGroup]="usuarioForm" (ngSubmit)="confirmAdd()">
+      <mat-form-field appearance="fill">
+        <mat-label>Usuario</mat-label>
+        <input matInput formControlName="usuario" maxlength="100" required>
+        <mat-error *ngIf="usuarioForm.get('usuario')?.hasError('required')">El campo Usuario es obligatorio</mat-error>
+      </mat-form-field>
 
-      <div class="form">
-        <mat-form-field class="custom-mat-form-field" color="accent">
-          <input matInput placeholder="Correo electrónico" formControlName="email" maxlength="255" required>
-          <mat-error *ngIf="usuarioForm.get('email')?.hasError('required')">El campo Correo electrónico es obligatorio</mat-error>
-          <mat-error *ngIf="usuarioForm.get('email')?.hasError('email')">Ingrese un correo electrónico válido</mat-error>
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Correo electrónico</mat-label>
+        <input matInput formControlName="email" maxlength="255" required>
+        <mat-error *ngIf="usuarioForm.get('email')?.hasError('required')">El campo Correo electrónico es obligatorio</mat-error>
+        <mat-error *ngIf="usuarioForm.get('email')?.hasError('email')">Ingrese un correo electrónico válido</mat-error>
+      </mat-form-field>
 
-      <div class="form">
-        <mat-form-field class="custom-mat-form-field" color="accent">
-          <input matInput placeholder="Nombre público" formControlName="nombre_publico" maxlength="255" required>
-          <mat-error *ngIf="usuarioForm.get('nombre_publico')?.hasError('required')">El campo Nombre público es obligatorio</mat-error>
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Nombre público</mat-label>
+        <input matInput formControlName="nombre_publico" maxlength="255" required>
+        <mat-error *ngIf="usuarioForm.get('nombre_publico')?.hasError('required')">El campo Nombre público es obligatorio</mat-error>
+      </mat-form-field>
 
-      <div class="form">
-        <mat-form-field class="custom-mat-form-field" color="accent">
-          <input matInput placeholder="Contraseña" formControlName="password" type="password" maxlength="100" required>
-          <mat-error *ngIf="usuarioForm.get('pass_user')?.hasError('required')">El campo Contraseña es obligatorio</mat-error>
-        </mat-form-field>
-      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Contraseña</mat-label>
+        <input matInput formControlName="password" type="password" maxlength="100" required>
+        <mat-error *ngIf="usuarioForm.get('password')?.hasError('required')">El campo Contraseña es obligatorio</mat-error>
+      </mat-form-field>
 
-      <div class="form">
-        <mat-form-field class="custom-mat-form-field" color="accent">
-          <mat-label>Rol</mat-label>
-          <mat-select formControlName="id_rol" required>
-            <mat-option value="1">Administrador</mat-option>
-            <mat-option value="2">Usuario</mat-option>
-          </mat-select>
-          <mat-error *ngIf="usuarioForm.get('id_rol')?.hasError('required')">Seleccione un Rol</mat-error>
-        </mat-form-field>
-      </div>
-
-      <div mat-dialog-actions class="buttons">
-        <button mat-raised-button color="primary" id="onSubmit" type="submit" [disabled]="!usuarioForm.valid" (click)="confirmAdd()">Guardar</button>
-        <button mat-flat-button color="primary" id="onNoClick" (click)="onNoClick()" tabindex="-1">Cancelar</button>
-      </div>
+      <mat-form-field appearance="fill">
+        <mat-label>Rol</mat-label>
+        <mat-select formControlName="id_rol" required>
+          <mat-option value="1">Administrador</mat-option>
+          <mat-option value="2">Usuario</mat-option>
+        </mat-select>
+        <mat-error *ngIf="usuarioForm.get('id_rol')?.hasError('required')">Seleccione un Rol</mat-error>
+      </mat-form-field>
     </form>
-  </div>
+  </mat-card-content>
+
+  <mat-card-actions>
+    <button mat-raised-button color="primary" type="submit" [disabled]="!usuarioForm.valid" (click)="confirmAdd()">Guardar</button>
+    <button mat-button color="primary" (click)="onNoClick()">Cancelar</button>
+  </mat-card-actions>
+</mat-card>
