--- a/src/app/users/delete-user/delete-user.component.html
+++ b/src/app/users/delete-user/delete-user.component.html
@@ -1,12 +1,13 @@
-<div class="container">
-    <h3 mat-dialog-title>Borrar usuario</h3>
-
-    <p><strong>¡Atención! Se eliminará el usuario:</strong> {{usuario.usuario}} </p>
-
-    <p> Esto sirve para eliminar usuarios creados por error, en otro caso es recomendable deshabilitar el usuario desde el panel de editar.</p>
-
-    <div mat-dialog-actions>
-        <button id="deleteUser" mat-button type="submit" (click)="confirmDelete()">Eliminar</button>
-        <button id="onNoClick" mat-button (click)="onNoClick()" tabindex="-1">Cancelar</button>
+<div class="custom-card">
+    <div class="card-header">
+      <h3 class="card-title">Borrar usuario</h3>
+    </div>
+    <div class="card-body">
+      <p><strong>¡Atención! Se eliminará el usuario:</strong> {{ usuario.usuario }}</p>
+      <p>Esto sirve para eliminar usuarios creados por error, en otro caso es recomendable deshabilitar el usuario desde el panel de editar.</p>
+    </div>
+    <div class="card-footer">
+      <button class="btn btn-danger" id="deleteUser" type="submit" (click)="confirmDelete()">Eliminar</button>
+      <button class="btn btn-secondary" id="onNoClick" (click)="onNoClick()" tabindex="-1">Cancelar</button>
     </div>
 </div>
