--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -10,10 +10,26 @@
 .card-header {
   padding: 30px;
   border-bottom: 1px solid #333;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.card-header h2 {
+.header-title {
   margin: 0;
+}
+
+.add-button {
+  color: black;
+  background-color: #F5C518;
+  border: none;
+  border-radius: 5px;
+  padding: 15px 30px;
+  cursor: pointer;
+}
+
+.add-button:hover {
+  background-color: #d4aa0d;
 }
 
 .card-body {
